# tcboard

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  watchtests.sh
tcboard/: __init__.py  alert.py  dbmanager.py  devinfo.py  exceptions.py  game.py  livedata.py  livestatus.py  match.py  matchslot.py  matchstate.py  modelabc.py  player.py  point.py  tournament.py
tcboard/cli/: debug.py  main.py  util.py
tcboard/ext/squore/: __init__.py  devinfo.py  livedata.py  point.py
tcboard/ext/tptools/: livedata.py
tests/: conftest.py  test_alert.py  test_dbmanager.py  test_devinfo.py  test_exception.py  test_game.py  test_livedata.py  test_livestatus.py  test_match.py  test_matchslot.py  test_matchstate.py  test_modelabc.py
tests/cli/: conftest.py  test_clicontext.py
tests/ext/squore/: conftest.py  test_devinfo.py  test_livedata.py  test_point.py
tests/ext/tptools/: test_livedata.py
